2010-10-13  Armin Burgmeier  <armin@arbur.net>

	* win32_installer/gtkmm-vc100-2_4.props:
	* win32_installer/gtkmm-vc100-d-2_4.props: Add property sheets for
	MSVC 2010.

	* win32_installer/gtkmm-vc80-2_4.vsprops:
	* win32_installer/gtkmm-vc80-d-2_4.vsprops:
	* win32_installer/gtkmm-vc90-2_4.vsprops:
	* win32_installer/gtkmm-vc90-d-2_4.vsprops: Add Win32 to the property
	sheet name so that it can be distinguished from the Win64 variant.

	* win32_installer/gtkmm-installer.nsi.in:
	* win32_installer/install-msvc-module.sh:
	* win32_installer/build-installer.sh: Update installer for gtkmm 2.22,
	64 bit and MSVC 2010.

2010-10-06  Murray Cumming  <murrayc@murrayc.com>>

	Fix the build with latest GTK+ from git master.

	* gtk/src/gtk_vfuncs.defs: GtkCellRenderer: Some vfunc parameters are now
  const. This file is hand-written.

2.91.0:

2010-10-03  Murray Cumming  <murrayc@murrayc.com>

  gdkmm: Pixbuf: Fixed the build.

	* gdk/src/pixbuf.ccg: gdk_pixbuf_get_from_window() and
	gdk_pixbuf_get_from_surface() now take less parameters, which we ignored
	before anyway.

2010-10-03  Murray Cumming  <murrayc@murrayc.com>

  Adjustment: Fix the reference counting.

	* gtk/src/adjustment.hg: Use _DERIVES_INITIALLY_UNOWNED() as with
	RecentFilter and FileFilter.

2010-10-01  Murray Cumming  <murrayc@murrayc.com>

	gdkmm: Window: Added new methods.

	* gdk/src/window.hg: Added get_visual(), get_screen(), get_display(),
	set_backround_pattern(), get_offscreen_surface(), get_width(), get_height().
	Remove redirect_to_drawable(), remove_redirection, clear(),
	clear_area_a, which were no longer generated anyway because they have been
	removed from GTK+ (and therefore from our .defs).
	* gdk/srd/drawable.hg: Removed get_size(), get_depth(), set_colormap(),
	get_colormap(), get_visual(), get_screen() and get_display() which were
	also removed from GTK+. Presumably the new GdkWindow methods replace them.

2010-10-02  Armin Burgmeier  <armin@arbur.net>

	* MSVC_Net2005/README: