@@ -178,8 +178,7 @@ gtkmm_files_any_hg =		\
 	viewport.hg		\
 	volumebutton.hg		\
 	widget.hg		\
-	window.hg \
-	wrapbox.hg
+	window.hg
 
 gtkmm_files_posix_hg =		\
 	pagesetupunixdialog.hg	\
