@@ -1,34 +1,0 @@
-// -*- c++ -*-
-/* $Id: wrapbox.ccg,v 1.6 2004/03/03 18:48:04 murrayc Exp $ */
-
-/*
- *
- * Copyright 2010 The gtkmm Development Team
- *
- * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2.1 of the License, or (at your option) any later version.
- *
- * This library is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
- *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free
- * Software Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
- */
-
-#include <glib.h>
-#include <gtk/gtk.h>
-
-namespace Gtk
-{
-
-void WrapBox::append_child(Widget& widget, WrapBoxPacking packing)
-{
-  insert_child(widget, -1 /* see the C documentation */, packing);
-}
-
-} // namespace Gtk
