@@ -1,3 +1,11 @@
+2010-10-14  Murray Cumming  <murrayc@murrayc.com>
+
+	Remove WrapBox.
+
+  * gtk/src/filelist.am:
+	* gtk/src/wrapbox.[hg|ccg]: Remove WrapBox because GtkWrapBox has moved to
+  libegg instead.
+
 2010-10-13  Armin Burgmeier  <armin@arbur.net>
 
 	* win32_installer/gtkmm-vc100-2_4.props:
